[Legacy] Diagnostic Tool Whitespace Styling Fixes

--- a/themes/suite8/css/suitep-base/admin-diagnostic.scss
+++ b/themes/suite8/css/suitep-base/admin-diagnostic.scss
@@ -25,9 +25,11 @@
     table.view {
         tr td {  
             padding-left: 1em;
-            width: 50%;
             padding-top: 0.5em;
             vertical-align: middle;
+        }
+        tr td[scope=row] {
+            width: 20%;
         }
     }
 }
